package ub.edu.model.punPas_Strategy;



import java.util.Map;

public interface iLlistar {
    Map<String, Integer> llistar(String criteri) throws Exception;
}
