package ub.edu.model.punPas_Strategy;


public interface iValorar {
    void valorar() throws Exception;
}
